# SkyFire_548

./: .editorconfig  CMakeLists.txt  README.md
.github/workflows/: ubuntu-pch.yml  ubuntu.yml  windows.yml
cmake/: options.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: FindMySQL.cmake  FindOpenSSL.cmake  FindPCHSupport.cmake  InstallRuntimeDependencies.cmake
cmake/platform/win/: settings.cmake
dep/: CMakeLists.txt
dep/SFMT/: sfmt.h
dep/acelite/: GNUmakefile
dep/acelite/ace/: ACE_vs2019.vcxproj  ACE_vs2019.vcxproj.filters  ACE_vs2022.vcxproj  ACE_vs2022.vcxproj.filters  CMakeLists.txt  GNUmakefile  GNUmakefile.ACE  ace_vs2019.sln  ace_vs2022.sln
dep/acelite/ace/Compression/: Compression_vs2019.sln  Compression_vs2022.sln  GNUmakefile  GNUmakefile.ACE_Compression
dep/acelite/ace/ETCL/: ETCL_vs2019.sln  ETCL_vs2022.sln  GNUmakefile  GNUmakefile.ACE_ETCL  GNUmakefile.ACE_ETCL_Parser
dep/acelite/ace/FlReactor/: GNUmakefile  GNUmakefile.ACE_FlReactor
dep/acelite/ace/Monitor_Control/: GNUmakefile  GNUmakefile.Monitor_Control  Monitor_Control_vs2019.sln  Monitor_Control_vs2022.sln
dep/acelite/ace/QoS/: QoS_vs2019.sln  QoS_vs2022.sln
dep/acelite/ace/SSL/: GNUmakefile  GNUmakefile.SSL
dep/acelite/ace/TkReactor/: GNUmakefile  GNUmakefile.ACE_TkReactor
dep/acelite/ace/XtReactor/: GNUmakefile  GNUmakefile.ACE_XtReactor
sql/base/: auth_database.sql  characters_database.sql
src/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp
src/server/authserver/Realms/: RealmList.cpp  RealmList.h
src/server/authserver/Server/: AuthPatchTransfer.h  AuthSocket.cpp  AuthSocket.h  RealmAcceptor.cpp  RealmAcceptor.h  RealmSocket.cpp  RealmSocket.h
src/server/collision/: CMakeLists.txt  VMapDefinitions.h
src/server/collision/Management/: VMapManager2.cpp  VMapManager2.h
src/server/game/: CMakeLists.txt
src/server/game/Accounts/: AccountMgr.h
src/server/game/Achievements/: AchievementMgr.h
src/server/game/AuctionHouse/: AuctionHouseMgr.h
src/server/game/Battlefield/: BattlefieldMgr.h
src/server/game/Battlegrounds/: ArenaTeamMgr.h  BattlegroundMgr.h  BattlegroundQueue.cpp
src/server/game/BlackMarket/: BlackMarketMgr.h
src/server/game/Calendar/: CalendarMgr.h
src/server/game/Cinematic/: CinematicPathMgr.cpp  CinematicPathMgr.h
src/server/game/Combat/: ThreatCalcHelper.h  ThreatManager.cpp  ThreatManager.h
src/server/game/Conditions/: ConditionMgr.h
src/server/game/DungeonFinding/: LFGMgr.h
src/server/game/Events/: GameEventMgr.h
src/server/game/Globals/: ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h
src/server/game/Groups/: GroupMgr.h
src/server/game/Guilds/: GuildFinderMgr.h  GuildMgr.h
src/server/game/Handlers/: AddonHandler.h  CharacterHandler.cpp  MailHandler.cpp  MiscHandler.cpp  MovementHandler.cpp  PetHandler.cpp  SpellHandler.cpp
src/server/game/Instances/: InstanceSaveMgr.h
src/server/game/Maps/: MapManager.h  MapUpdater.cpp  MapUpdater.h  TransportMgr.h
src/server/game/Miscellaneous/: CurrencyFormulas.h  Formulas.h
src/server/game/Movement/: MovementGenerator.h
src/server/game/OutdoorPvP/: OutdoorPvPMgr.h
src/server/game/Pools/: PoolMgr.h
src/server/game/PrecompiledHeaders/: gamePCH.h
src/server/game/Scripting/: ScriptMgr.h  ScriptSystem.h
src/server/game/Server/: WorldSession.cpp  WorldSession.h  WorldSocket.cpp  WorldSocket.h  WorldSocketAcceptor.cpp  WorldSocketAcceptor.h  WorldSocketMgr.cpp  WorldSocketMgr.h  WorldSocketSessionState.h
src/server/game/Spells/: Spell.cpp  SpellEffects.cpp  SpellInfo.cpp  SpellInfo.h  SpellMgr.cpp  SpellMgr.h  SpellTargeting.cpp  SpellTargeting.h  SpellValidation.h
src/server/game/Texts/: CreatureTextMgr.h
src/server/game/Tickets/: TicketInfo.h  TicketMgr.h
src/server/game/Warden/: WardenCheckMgr.cpp  WardenCheckMgr.h  WardenWin.cpp
src/server/game/Weather/: Weather.cpp  WeatherMgr.cpp
src/server/game/World/: World.cpp  World.h
src/server/scripts/: CMakeLists.txt
src/server/scripts/Commands/: cs_account.cpp  cs_ban.cpp  cs_misc.cpp  cs_server.cpp
src/server/scripts/EasternKingdoms/: zone_elwynn_forest.cpp
src/server/scripts/Spells/: spell_generic.cpp  spell_mastery.cpp
src/server/shared/: AutoPtr.h  CMakeLists.txt  Common.h  Containers.h  Define.h
src/server/shared/Configuration/: Config.cpp  Config.h
src/server/shared/Cryptography/: BigNumber.cpp  OpenSSLProviders.cpp  OpenSSLProviders.h
src/server/shared/Database/: AdhocStatement.h  DatabaseQueue.cpp  DatabaseQueue.h  DatabaseWorker.cpp  DatabaseWorker.h  DatabaseWorkerPool.h  MySQLConnection.cpp  MySQLConnection.h  MySQLThreading.h  PreparedStatement.h  QueryHolder.h  QueryResult.h  SQLOperation.h  Transaction.h
src/server/shared/Debugging/: Errors.cpp
src/server/shared/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/server/shared/Logging/: Appender.cpp  Appender.h  AppenderConsole.cpp  AppenderFile.cpp  AppenderFile.h  Log.cpp  Log.h  LogWorker.cpp  LogWorker.h
src/server/shared/Packets/: ByteBuffer.cpp  ByteBuffer.h
src/server/shared/Platform/: Singleton.h  Threading.h  TimeUtils.h
src/server/shared/PrecompiledHeaders/: sharedPCH.h
src/server/shared/Threading/: BoostAsioExecutor.h  BoostAsioTaskRunner.h  BoostAsioWork.h  Callback.h  DelayExecutor.cpp  DelayExecutor.h  Future.h  LockedQueue.h  Threading.cpp  Threading.h
src/server/shared/Utilities/: NetworkAddress.cpp  NetworkAddress.h  ServiceWin32.cpp  Timer.h  Util.cpp  Util.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h
src/server/worldserver/SFSoap/: SFSoap.cpp  (+1 more)
src/tests/: AuthPatchTransferTests.cpp  BoostAsioExecutorTests.cpp  BoostAsioTaskRunnerTests.cpp  BoostAsioUtilsTests.cpp  CMakeLists.txt  DatabaseQueueTests.cpp  GameDomainTestSupport.cpp  GameDomainTests.cpp  RealmSocketTests.cpp  TimeUtilsTests.cpp  WorldSocketSessionStateTests.cpp
src/tools/map_extractor/: dbcfile.h
src/tools/mmaps_generator/: CMakeLists.txt  MapBuilder.cpp  MapBuilder.h  PathCommon.h
src/tools/vmap4_assembler/: CMakeLists.txt
tools/dev/: game_metrics.ps1
(+36 files in other folders)
